[gd_scene load_steps=4 format=3 uid="uid://bj3toahld1ri3"]

[ext_resource type="Script" uid="uid://cj4djc743vvbe" path="res://src/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://lik5hbaoghpj" path="res://src/gameplay/LevelMap.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cjsrrhs05pdpb" path="res://src/ui/UI.tscn" id="3"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("3")]

[node name="LevelMap" parent="." instance=ExtResource("2")]

[node name="Timer" type="Timer" parent="."]

[connection signal="file_selected" from="CanvasLayer/UI" to="." method="_on_ui_file_selected"]
[connection signal="game_item_selected" from="CanvasLayer/UI" to="." method="_on_ui_game_item_selected"]
[connection signal="level_item_selected" from="CanvasLayer/UI" to="." method="_on_ui_level_item_selected"]
[connection signal="level_selected" from="CanvasLayer/UI" to="." method="_on_ui_level_selected"]
[connection signal="game_state_changed" from="LevelMap" to="." method="_on_level_map_game_state_changed"]
[connection signal="next_level_requested" from="LevelMap" to="." method="_on_level_map_next_level_requested"]
[connection signal="pickup_item" from="LevelMap" to="." method="_on_level_map_pickup_item"]
[connection signal="player_reached_exit" from="LevelMap" to="." method="_on_level_map_player_reached_exit"]
[connection signal="remove_item" from="LevelMap" to="." method="_on_level_map_remove_item"]
[connection signal="update_hint_status" from="LevelMap" to="." method="_on_level_map_update_hint_status"]
[connection signal="update_window_title" from="LevelMap" to="LevelMap" method="_on_update_window_title"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
